# mtls

./: .gitignore  Cargo.toml  Readme.md  aqua.json  generate_certs.sh  generate_certs_old.sh
ca/: ca.crt  ca.key  client_0.crt  client_0.csr  client_0.key  client_0.pem  localhost.bundle.crt  localhost.crt  localhost.csr  localhost.key  localhost.pubkey  second_ca.crt  second_ca.key  second_client.crt  second_client.csr  second_client.key  second_client.p12  second_client.pem
src/: lib.rs  main.rs
tests/: common.rs  server_tests.rs
