[package]
name = "mtls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
warp = { version = "0.3", features = ["tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"

[features]
default = ["native-tls"]
rustls-tls = ["reqwest/rustls-tls-manual-roots"]
native-tls = ["reqwest/native-tls"]

[[bin]]
name = "mtls"
path = "src/main.rs"
